RESOLVED FIXED106341
[GTK][WK2] accessibility/label-for-control-hittest.html is failing
https://bugs.webkit.org/show_bug.cgi?id=106341
Summary [GTK][WK2] accessibility/label-for-control-hittest.html is failing
Zan Dobersek
Reported 2013-01-08 10:26:09 PST
The accessibility/label-for-control-hittest.html layout test is failing on GTK WK2 port. Here's the diff: --- /home/zan/Dev/webkit/webkit/WebKitBuild/Release/layout-test-results/accessibility/label-for-control-hittest-expected.txt +++ /home/zan/Dev/webkit/webkit/WebKitBuild/Release/layout-test-results/accessibility/label-for-control-hittest-actual.txt @@ -4,7 +4,7 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS control.role is 'AXRole: AXCheckBox' +FAIL control.role should be AXRole: AXCheckBox. Threw exception TypeError: 'null' is not an object (evaluating 'control.role') PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch (2.99 KB, patch)
2013-03-21 01:47 PDT, Krzysztof Czech
no flags
Patch (3.18 KB, patch)
2013-05-21 03:30 PDT, Krzysztof Czech
no flags
Krzysztof Czech
Comment 1 2013-03-21 01:47:14 PDT
Martin Robinson
Comment 2 2013-03-21 07:28:41 PDT
Comment on attachment 194201 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194201&action=review > Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:308 > + return AccessibilityUIElement::create(atk_component_ref_accessible_at_point(ATK_COMPONENT(m_element), x, y, ATK_XY_WINDOW)); Just noticed that AccessibilityUIElement seems to be leaking every single element that it wraps. That seems unrelated though.
Mario Sanchez Prada
Comment 3 2013-04-19 05:31:29 PDT
Comment on attachment 194201 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194201&action=review >> Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:308 >> + return AccessibilityUIElement::create(atk_component_ref_accessible_at_point(ATK_COMPONENT(m_element), x, y, ATK_XY_WINDOW)); > > Just noticed that AccessibilityUIElement seems to be leaking every single element that it wraps. That seems unrelated though. Hmm... that's right. It seems we either would need to make PlatformUIElement a smart pointer or just to add some code in ~AccessibilityUIElement for ATK so we get rid of the reference to the AtkObject* owned by this class.
Krzysztof Czech
Comment 4 2013-05-21 03:30:22 PDT
Krzysztof Czech
Comment 5 2013-05-21 03:36:21 PDT
AccessibilityUIElement::create(atk_component_ref_accessible_at_point(ATK_COMPONENT(m_element), x, y, ATK_XY_WINDOW)); > > > > Just noticed that AccessibilityUIElement seems to be leaking every single element that it wraps. That seems unrelated though. > > Hmm... that's right. It seems we either would need to make PlatformUIElement a smart pointer or just to add some code in ~AccessibilityUIElement for ATK so we get rid of the reference to the AtkObject* owned by this class. Patch correcting this failure has been proposed ( see 112913) and already landed.
WebKit Commit Bot
Comment 6 2013-05-21 06:15:58 PDT
Comment on attachment 202405 [details] Patch Clearing flags on attachment: 202405 Committed r150439: <http://trac.webkit.org/changeset/150439>
WebKit Commit Bot
Comment 7 2013-05-21 06:16:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.