[GTK][WK2] accessibility/label-for-control-hittest.html is failing https://bugs.webkit.org/show_bug.cgi?id=106341

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-05-21
Reviewed by Martin Robinson.

Tools:

Adds support for retrieving accessibility element at exact point.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::elementAtPoint):

LayoutTests:

Fixing failing test. The reason of failure is missing
possibility of getting accessibility object at exact position.

* platform/gtk-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/134846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150439 268f45cc-cd09-0410-ab3c-d52691b4dbfc